--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ nav li {
 nav a {
     color: #999;
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 20vw;
       
 }
 
@@ -84,4 +84,8 @@ nav a::before {
 
 nav a:hover::before {
      width: 100%;
+}
+
+URLHeader {
+    font-size: 1vw; 
 }
