--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@ p {
 }
 
 .container {
-    width: 80%;
     margin: 0 auto;
 }
 
@@ -33,12 +32,13 @@ header {
 
 .logo {
     float: left;
-    line-height: inherit
+    line-height: inherit;
+    width: min(80px, 125vh);
     
 }
 
 nav {
-    float: right;
+    float: none;
 }
 
 header::after {
@@ -56,8 +56,9 @@ nav ul {
 
 nav li {
     display: inline-block;
-    margin-left: 70px;
-    padding-top: 50px;
+    margin-left: 40px;
+    padding-top: 10px;
+    width: 10%;
     
     position: relative;
 }
@@ -65,7 +66,7 @@ nav li {
 nav a {
     color: #999;
     text-transform: uppercase;
-    font-size: 20vw;
+    font-size: 2vw;
       
 }
 
@@ -77,7 +78,7 @@ nav a::before {
     
     position: absolute;
     top: 0;
-    width: 0%;
+    width: 0vw;
     transition: all ease-in-out 250ms;
     
 }
@@ -86,6 +87,6 @@ nav a:hover::before {
      width: 100%;
 }
 
-URLHeader {
-    font-size: 1vw; 
+.navlink{
+    font-size: min(4vw, 2em)
 }
