--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,13 @@ body {
 }
 
 h1, h2, h3 {
-    color: #999
+    color: #999;
+    font-size: 50px;
+    text-decoration: underline;
+}
+
+h4 {
+    font-size: 10vw;
 }
 
 a {
